Corrige bug na contagem de rodadas